# Restaurant_Menu

./: README.md
Project/Restaurant_Menu/: CMakeLists.txt  PreparateIn.txt  PreparateOut.txt  ReadFromFileException.h  RepoException.h  ValidationException.h  main.cpp  testIn.txt
Project/Restaurant_Menu/Domain/: Desert.cpp  Desert.h  FelulPrincipal.cpp  FelulPrincipal.h  FelulSecundar.cpp  FelulSecundar.h  Preparat.cpp  Preparat.h  ValidatorDesert.cpp  ValidatorDesert.h  ValidatorFelulPrincipal.cpp  ValidatorFelulPrincipal.h  ValidatorFelulSecundar.cpp  ValidatorFelulSecundar.h  ValidatorPreparat.cpp  ValidatorPreparat.h
Project/Restaurant_Menu/Repository/: RepoFile.cpp  RepoFile.h  Repository.cpp  Repository.h
Project/Restaurant_Menu/Service/: Service.cpp  Service.h
Project/Restaurant_Menu/Teste/: Tests.cpp  Tests.h
Project/Restaurant_Menu/UI/: UI.cpp  UI.h
